<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Imagen Logo -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_custom"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CircleImage"
        app:strokeColor="#009688"
        app:strokeWidth="3dp" />

    <!-- Text Nombre -->

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/titulo_registro"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo">

        <!-- Text Nombre -->
        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_nombre"
            android:inputType="textPersonName" />

        <!-- Text Email -->
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_email"
            android:inputType="textWebEmailAddress" />

        <!-- Text Edad -->
        <EditText
            android:id="@+id/etEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_edad"
            android:inputType="number" />
    </LinearLayout>

    <!-- Radio button Hobby -->
    <TextView
        android:id="@+id/tvHobbyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_hobby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <RadioGroup
        android:id="@+id/rgHobbies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHobbyLabel"
        tools:layout_editor_absoluteX="16dp">

        <RadioButton
            android:id="@+id/rbDeportes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_deportes" />

        <RadioButton
            android:id="@+id/rbMusica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_musica" />

        <RadioButton
            android:id="@+id/rbTecnologia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_tecnologia" />
    </RadioGroup>

    <!-- Button Crear pefil -->
    <Button
        android:id="@+id/btnCrearPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/btn"
        android:text="@string/btn_crear_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgHobbies" />

</androidx.constraintlayout.widget.ConstraintLayout>